Fixed navbar spacing

--- a/pc_shop_frontend/src/components/Header/Header.css
+++ b/pc_shop_frontend/src/components/Header/Header.css
@@ -38,7 +38,7 @@
 .home {
     float: left;
     font-weight: 600;
-    margin-left: 1em;
+    padding: 0 10px;
 }
 
 .home a {
@@ -50,7 +50,7 @@
 }
 
 .category-menu {
-    margin-left: 3.5em;
+    padding: 0 10px;
     display: flex;
 }
 
@@ -71,13 +71,19 @@
 
 .search-bar-section {
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+
+.search-bar-section form {
+    display: flex;
 }
 
 .search-bar-section form input {
+    align-self: center;
     width: 34em;
     height: 2.2em;
-    padding: 10px;
-    border-radius: 5px;
+    padding-left: 10px;
 }
 
 .search-bar-section form input::placeholder {
